--- a/baitap1.html
+++ b/baitap1.html
@@ -6,6 +6,14 @@
     <title>BAI-TAP-1</title>
   </head>
   <body>
-    hello
+    <!-- Bài 1: Sử dụng vòng lặp để đếm từ 1 đến 100. Khi số là 99, hiển thị hộp thoại thông báo là đã hoàn thành. -->
   </body>
+  <script>
+    for (let i = 1; i <= 100; i++) {
+      console.log(i);
+      if (i == 99) {
+        console.log("thông báo đã hoàn thành");
+      }
+    }
+  </script>
 </html>
